test/scc/stmt/semantic-errors/043.a
043.t:3:7: error: a continue statement may only be used within a loop